--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,6 +23,11 @@ html, body {
 }
 
 /* --- Carousel --> */
+
+.carousel-inner{
+height: 560px;
+}
+
 .carousel-inner img {
   width: 100%;
   height: 100%;
@@ -30,21 +35,23 @@ html, body {
 
 .carousel-caption {
   position: absolute;
-  top: 65%;
+  top: 50%;
   transform:  translateY(-50%);
 }
 
 .carousel-caption h1 {
   font-size: 500%;
   text-transform: uppercase;
-  text-shadow: 1px 1px 15px #000
+  text-shadow: 1px 1px 15px #000 ;
+  padding-bottom: 30px;
+
 }
 
 .carousel-caption h3 {
   font-size:200%;
   font-weight: 500;
-  text-shadow: 1px 1px 10px #000
-  padding-bottom: 1rem;
+  text-shadow: 1px 1px 10px #000 ;
+  padding-bottom: 40px;
 }
 
 .btn-primary {
@@ -55,8 +62,13 @@ html, body {
 .btn-primary: hover {
   background-color: green;
 }
+ a{
+  text-decoration: none !important;
+  color: inherit;
+}
 
-/* --- Carousel Indicators -->
+
+/* --- Carousel Indicators --> 
 .carousel-indicators li {
   background-color: #999;
   background-color: rgba(70,70,70,.25);
@@ -66,6 +78,16 @@ html, body {
   background-color: #444;
 }
 */
+
+
+/* ---About page--- */
+.container-fluid{
+  height: 560px;
+}
+.container-fluid img{
+  height: 100%;
+  width: 100%;
+}
 
 /* --- Jumbotron --> */
 
@@ -267,6 +289,7 @@ figure {
 .footer-allergyhelp img{
   width: 10rem;
 }
+
 
 
 
