--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,11 +28,6 @@ html, body {
 height: 560px;
 }
 
-.carousel-inner img {
-  width: 100%;
-  height: 100%;
-}
-
 .carousel-caption {
   position: absolute;
   top: 50%;
@@ -176,11 +171,7 @@ footer p, h5 {
     top: 45%;
   } }
 
-@media (max-width: 768px){
-  .arrows{
-  top: 45%;
-  }
-}
+
 
   .carousel-caption h1 {
     font-size: 350%;
@@ -199,8 +190,10 @@ footer p, h5 {
   }
 
   .display-4 {
-    font-size: 200%;
-  }
+    font-size: 3.5rem;
+    font-weight: 300;
+    line-height: 1.2;
+}
 
   .social a {
     font-size: 2.5em;
@@ -230,9 +223,6 @@ footer p, h5 {
     display: none;
   }
 
-  .display-4 {
-    font-size: 160%;
-  }
 
   .social a {
     font-size: 2em;
