--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,88 +1,200 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,700');
 @import url('https://fonts.google.com/?selection.family=Roboto:400,500,700,900');
+/* --- General Style --> */
+
 html,
 body {
   height: 100%;
   width: 100%;
   font-family: 'Roboto', 'Poppins', sans-serif;
-  color: #222;
+  background: #fff;
+  color: #666666;
+}
+
+a {
+  color: #5fcf80;
+}
+
+a:hover,
+a:active,
+a:focus {
+  color: #5fcf80;
+  outline: none;
+  text-decoration: none;
+}
+
+p {
+  padding: 0;
+  margin: 0 0 30px 0;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: 'Poppins', sans-serif;
+  font-weight: 400;
+  margin: 0 0 20px 0;
+  padding: 0;
 }
 
 /* --- Navbar --> */
 
-.navbar {
-  padding: .8rem;
+#header {
+  padding: 30px 0;
+  height: 92px;
+  position: fixed;
+  left: 0;
+  top: 0;
+  right: 0;
+  transition: all 0.5s;
+  z-index: 997;
 }
 
-.navbar-nav li {
-  padding-right: 1.4rem;
+#header #logo {
+  float: left;
 }
 
-.nav-link {
-  font-size: 1.1em;
+#header #logo img {
+  padding: 0;
+  margin: 0;
+}
+
+/* --- jQuery Fixed Nav --> */
+
+#header.header-fixed {
+  background: rgba(52, 59, 64, 0.9);
+  padding: 20px 0;
+  height: 72px;
+  transition: all 0.5s;
+}
+
+.nav-menu {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.nav-menu ul {
+  position: absolute;
+  display: none;
+  top: 100%;
+  left: 0;
+  z-index: 99;
+}
+
+.nav-menu li {
+  float: left;
+  position: relative;
+  white-space: nowrap;
+}
+
+.nav-menu ul {
+  top: 0;
+  left: 100%;
+}
+
+#nav-menu-container {
+  float: right;
+  margin: 0;
+}
+
+/* --- Navbar Styling --> */
+
+.nav-menu a {
+  padding: 0 8px 10px 8px;
+  text-decoration: none;
+  display: inline-block;
+  color: #fff;
+  font-family: "Poppins", sans-serif;
+  font-weight: 300;
+  text-transform: uppercase;
+  font-size: 15px;
+  outline: none;
+}
+
+.nav-menu>li {
+  margin-left: 20px;
+}
+
+.nav-menu>li>a:before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: #5fcf80;
+  visibility: hidden;
+  -webkit-transform: scaleX(0);
+  transform: scaleX(0);
+  -webkit-transition: all 0.3s ease-in-out 0s;
+  transition: all 0.3s ease-in-out 0s;
+}
+
+.nav-menu a:hover:before,
+.nav-menu li:hover>a:before,
+.nav-menu .menu-active>a:before {
+  visibility: visible;
+  -webkit-transform: scaleX(1);
+  transform: scaleX(1);
 }
 
 /* --- Carousel --> */
 
-.c-wrapper {
-  width: 90%;
-  margin: auto;
-}
-
-.carousel-inner img {
+#carousel {
+  display: table;
   width: 100%;
-  height: 100%;
+  height: 100vh;
+  background: url(../img/dandelion1.jpg) top center fixed;
+  background-size: cover;
 }
 
-.carousel-caption {
-  position: absolute;
-  top: 65%;
-  transform: translateY(-50%);
+#carousel .carousel-container {
+  background: rgba(0, 0, 0, 0.6);
+  display: table-cell;
+  margin: 0;
+  padding: 0 10px;
+  text-align: center;
+  vertical-align: middle;
 }
 
-.carousel-caption h1 {
-  font-size: 500%;
+#carousel h1 {
+  margin: 30px 0 10px 0;
+  font-size: 48px;
+  font-weight: 700;
+  line-height: 56px;
   text-transform: uppercase;
-  text-shadow: 1px 1px 15px #000;
+  color: #fff;
 }
 
-.carousel-caption h3 {
-  font-size: 200%;
+#carousel h2 {
+  color: #eee;
+  margin-bottom: 50px;
+  font-size: 24px;
+}
+
+#carousel .btn-get-started {
+  font-family: "Poppins", sans-serif;
+  text-transform: uppercase;
   font-weight: 500;
-  text-shadow: 1px 1px 10px #000;
-  padding-bottom: 1rem;
+  font-size: 16px;
+  letter-spacing: 1px;
+  display: inline-block;
+  padding: 8px 28px;
+  border-radius: 50px;
+  transition: 0.5s;
+  margin: 10px;
+  border: 2px solid #5fcf80;
+  color: #fff;
 }
 
-.btn-primary {
-  background-color: #5fcf80;
-  border: 1px solid black;
+#carousel .btn-get-started:hover {
+  background: #5fcf80;
+  border: 2px solid #5fcf80;
 }
-
-.carousel-caption a {
-  text-decoration: none;
-  color: inherit;
-}
-
-/* --- Black Carousel Indicators -->
-.carousel-indicators li {
-  background-color: #999;
-  background-color: rgba(70,70,70,.25);
-}
-
-.carousel-indicators .active {
-  background-color: #444;
-}
-*/
-
-/*--- Red&Green Carousel Indicators -->
-
-.carousel-indicators li {
-  background-color: red;
-}
-
-.carousel-indicators .active {
-  background-color: greenyellow;
-}*/
 
 /* --- Jumbotron --> */
 
@@ -176,6 +288,21 @@ h5 {
 }
 
 @media (max-width: 768px) {
+  #header #logo img {
+    max-height: 40px;
+  }
+  #nav-menu-container {
+    display: none;
+  }
+  #carousel h1 {
+    font-size: 28px;
+    line-height: 36px;
+  }
+  #carousel h2 {
+    font-size: 18px;
+    line-height: 24px;
+    margin-bottom: 30px;
+  }
   .carousel-caption {
     top: 45%;
   }
