--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -62,6 +62,31 @@ h6 {
   margin: 0;
 }
 
+.container #nav-menu-container .btn-get-started {
+  font-family: "Poppins", sans-serif;
+  text-transform: uppercase;
+  font-weight: 500;
+  font-size: 16px;
+  letter-spacing: 1px;
+  display: inline-block;
+  padding: 7px 24px;
+  border-radius: 50px;
+  transition: 0.5s;
+  margin: -20px 0px 5px;
+  border: 2px solid #5fcf80;
+  color: #fff;
+}
+
+.container #nav-menu-container .btn-get-started:hover
+{
+  background-color: #5fcf80;
+  
+}
+.container #nav-menu-container .btn-get-started:hover:before
+{
+  visibility: hidden;
+}
+
 /* --- jQuery Fixed Nav --> */
 
 #header.header-fixed {
