Revert "Merge branch 'test'"
This reverts commit 5ad33a18167f6b7dcd8e691b60d93d52d54ff9ab, reversing
changes made to fd6749265a6c27afbb35a6509d934a991d00e4bc.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -218,9 +218,6 @@ button:active {
   padding-bottom: 2rem;
 }
 
-button.btn.btn-dark{
-  text-align: center;
-}
 .welcome {
   width: 75%;
   margin: 0 auto;
@@ -236,8 +233,7 @@ button.btn.btn-dark{
 
 .fa-allergies,
 .fa-user-md,
-.fa-heart,
-.fa-info-circle {
+.fa-heart {
   color: #5fcf80;
   font-size: 8em;
   padding-bottom: 2rem;
@@ -467,10 +463,6 @@ button.btn.btn-dark{
 }
 
 /*--About--> */
-#teamphoto {
-  max-width: 100%;
-  height: auto;
-}
 
 #header-about {
   background: rgba(52, 59, 64, 0.9);
@@ -570,13 +562,8 @@ button.btn.btn-dark{
 }
 
 #team .member .pic img {
-<<<<<<< HEAD
   max-width: 65%;
   border-radius: 50%;
-=======
-    max-width:  65%;
-    border-radius: 50%;
->>>>>>> test
 }
 
 img {
